cmake_minimum_required(VERSION 3.9)
project(CIR2_Prog_TP)
set(CMAKE_CXX_STANDARD 20)

add_subdirectory(TD1)
add_subdirectory(TD2)
add_subdirectory(TD3)
add_subdirectory(TD4-5)
add_subdirectory(TD6)
add_subdirectory(Algo_2)
add_subdirectory(Algo_3)
add_subdirectory(Pathfinding)

#add_subdirectory(OOP_introduction)